--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.13.0"
+    "@nuxtjs/i18n": "^10.1.1",
+    "@pinia/nuxt": "^0.7.0",
+    "dayjs": "^1.11.18",
+    "nuxt": "^3.14.1592"
   }
 }
